manifests/goat-api/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goat-api-svc
spec:
  selector:
    app: goat-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5077
